[package]
name = "hyperion-rust-api"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
actix-web = "4.11.0"
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
elasticsearch = "9.0.0-alpha.1"
redis = "0.32.4"