[package]
name = "hyperion-rust-api"
version = "0.1.0"
edition = "2024"
resolver = "3"

[b]

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
actix-storage = { version = "0.3.0",features = ["serde_json"] }
rayon = "1.10.0"
moka = {version = "0.12.10",features = ["future"]}
gxhash = "3.5.0"
actix-web = "4.11.0"
actix-storage-redis = "0.3.0"
redis = {version = "0.22", features = ["json","serde_json"]}
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
elasticsearch = "9.0.0-alpha.1"
actix-rt = "2.10.0"
actix = "0.13.5"
env_logger = "0.11.8"
