[package]
name = "hyperion-rust-api"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
rayon = "1.10.0"
moka = {version = "0.12.10",features = ["future"]}
gxhash = "3.5.0"
actix-web = "4.11.0"
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
elasticsearch = "9.0.0-alpha.1"
env_logger = "0.11.8"
chrono = "0.4.41"
reqwest = "0.12.22"
futures-util = "0.3.31"
